# hyuabot-subway-realtime-updater

./: .gitignore  .python-version  Dockerfile  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: code-check.yml  default.yml  deploy.yml
models/: subway.py
scripts/: realtime.py
src/: __init__.py  main.py  models.py
src/scripts/: realtime.py
tests/: insert_subway_information.py  test_subway_data.py
