[metadata]
name = hyuabot-subway-realtime-updater
version = attr: src.__version__
description = HYUabot Subway Realtime Updater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyuabot-developers
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/jil8885/hyuabot-subway-realtime-updater
    Tracker = https://github.com/jil8885/hyuabot-subway-realtime-updater/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.14
setup_requires =
    setuptools>=83.0.0
    wheel>=0.47.0
install_requires =
    SQLAlchemy>=2.0.51
    requests>=2.34.2
    psycopg2-binary>=2.9.12
    pytz>=2026.2
zip_safe = false
include_package_data = true

[options.extras_require]
dev =
lint =
    flake8>=7.3.0
typecheck =
    mypy>=2.3.0
    sqlalchemy[mypy]>=2.0.51
    types-requests>=2.33.0.20260712
test =
    pytest>=9.1.1
    pytest-asyncio>=1.4.0
    aiohttp>=3.14.1
[mypy]
plugins = sqlalchemy.ext.mypy.plugin
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[options.packages.find]
where = src
include = *

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 120
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:aioredis.*:

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 120
blank_line_before_nested_class_or_def = true
